add documentation for /execute hook
